# placesindicator

./: .gitignore  .travis.yml  AUTHORS  README.md  meson.build
.github/: FUNDING.yml
data/: com.github.camellan.placesindicator.appdata.xml.in  com.github.camellan.placesindicator.desktop.in  com.github.camellan.placesindicator.gresource.xml
debian/: changelog  control  copyright  rules
indicator/: meson.build
indicator/po/: POTFILES  com.github.camellan.placesindicator.pot  meson.build  ru.po
indicator/src/: PlacesIndicator.vala
po/: POTFILES  aa.po  ab.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ca@valencia.po  ce.po  ch.po  ckb.po  co.po  com.github.camellan.placesindicator.pot  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  dz.po  (+164 more)
po/extra/: POTFILES  extra.pot  ru.po
src/: PlacesIndicator  PlacesIndicator.vala
